--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,8 @@
 copy.src.files=false
 copy.src.target=
 index.file=index.php
-remote.connection=LawFirmConnection-f1ddd9
+remote.connection=missing-config
 remote.directory=/LawFirm
 remote.upload=ON_RUN
-run.as=REMOTE
-url=http://3ojters.no-ip.biz/LawFirm/
+run.as=LOCAL
+url=http://localhost/LawFirm/
